<resources>
    <string name="app_name">Goliath</string>
    <string name="home">Home</string>
    <string name="award">Award</string>
    <string name="reward">Award</string>
    <string name="result">Result</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="lets_play">Let’s Play</string>
    <string name="dont_have_account_signup">Don’t have an account?<font color="#FFFFFF"><b> Sign Up</b></font></string>
    <string name="dont_have_account_signup_blue">Don’t have an account?<font color="#FF3F8BCA"><b> Sign Up</b></font></string>
    <string name="already_have_account_signin">Already have an account?<font color="#FF3F8BCA"><b>  Sign In</b></font></string>
    <string name="please_wait">Please wait...</string>
    <string name="verify">Verify</string>
    <string name="didn_t_get_the_code_resend_now">Didn’t you receive the OTP?</string>
    <string name="didn_t_get_the_code_resend">Didn’t you receive the OTP?<font color="#FF3F8BCA"> Resend</font></string>
    <string name="verify_otp">OTP Verification</string>
    <string name="loading">Loading</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="save_this_credit_card">Save this card</string>
    <string name="add_card">Add card</string>
    <string name="sign_up_with_google">Signup with Google</string>
    <string name="sign_in_with_google">Login with Google</string>
    <string name="choose_option">Choose Option</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="invalid_card">invalid card </string>
    <string name="please_enter_card_holder_name">Please enter card holder name</string>
    <string name="get_otp">Get OTP</string>
    <string name="or">Or</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_valid_phone_number">Enter valid 4 to 12 digit phone number</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="get_otp_for_sign_up">Get OTP for Sign up</string>
    <string name="get_started">Get Started</string>
    <string name="how_to_play">How to play</string>
    <string name="submit">Submit</string>
    <string name="press_again_to_exit_from_app">Press back again to exit</string>
    <string name="upcoming">Upcoming</string>
    <string name="live">Live</string>
    <string name="select_overs">Select Overs</string>
    <string name="selected_overs">Selected Overs</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="total_deduction_from_your_wallet">Total Deduction from your wallet</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="add_cash">Add Cash</string>
    <string name="your_answer">Your Answer : </string>
    <string name="your_answer_yes">Your Answer : <font color="#438DCA">Yes</font></string>
    <string name="your_answer_no">Your Answer : <font color="#438DCA">No</font></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_list">Question list</string>
    <string name="answer">Answer</string>
    <string name="you_won_the">You won the</string>
    <string name="dummy_name">James Martin</string>
    <string name="dummy_email">Jamesmartin@gmail.com</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="total_balance">Total Balance</string>
    <string name="deposited_winnings_fees_pay_withdraw">(Deposited + Winnings - Fees pay - Withdraw)</string>
    <string name="wallet">Wallet</string>
    <string name="add_money">Add Money</string>
    <string name="total_deposited">Total Deposited</string>
    <string name="fee_paid">Fee Paid</string>

    <string name="total_fee_paid">Total Fee Paid</string>
    <string name="total_withdraw">Total Withdraw</string>
    <string name="view_your_matches">View Your matches</string>
    <string name="logout_message">Are you sure want to Logout.</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="update">Update</string>
    <string name="dummy_description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable.</string>
    <string name="enter_conform_password">Enter Conform Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="change_password">Change Password</string>
    <string name="my_info_settings"><![CDATA[My Info & Settings]]></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="over_1">Over 1</string>
    <string name="you_haven_t_made_your_predictions">You haven’t made your Predictions</string>
    <string name="sms_notification">SMS Notification</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="about_us">About Us</string>
    <string name="add_amount">Add Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="name">Name</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="save">Save</string>
    <string name="bank_name">Bank Name</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="confirm_account_number">Confirm Account Number</string>
    <string name="enter_ifsc_swift_code">Enter IFSC/SWIFT Code</string>
    <string name="amount_balance">Amount Balance</string>
    <string name="deposited">Deposited</string>
    <string name="withdrawable_amout">Withdrawable amout</string>
    <string name="withdraw">Withdraw</string>
    <string name="bank_details">Bank Details</string>
    <string name="add_bank_details">Add Bank Details</string>
    <string name="transaction_history">Transaction History</string>
    <string name="wallet_details" >Wallet Details</string>
    <string name="matches_history">Matches History</string>
    <string name="my_predictions">My Predictions</string>
    <string name="deposit">Deposit</string>
    <string name="predict_new_over">Predict New Over</string>
    <string name="predicts_now">Predicts now</string>
    <string name="total_winnings">Total Winnings</string>
    <string name="correctly_predict_8_actions_in_one_over_of_n_cricket_and_win_big_npay_outs_from_5_of_8_correct_predictions">Correctly Predict 8 actions in one over of\n cricket and win BIG\npay outs from 5 of 8 correct predictions</string>
    <string name="_8_of_8_you_conquered_to_goliath">8 of 8\n\n You Conquered to Goliath</string>
    <string name="your_predictions">Your Predictions</string>
    <string name="check_result">Check Result</string>
    <string name="correctly_predict_8_actions_in_one_over_and_share_50_of_the_prize_pool_pay_outs_from_5_of_8_correct_predictions">Correctly predict 8 actions in ONE over and\n share 50% of the prize pool!\n Pay Outs from 5 of 8 correct Predictions</string>
    <string name="instant_cash_rewards">INSTANT CASH REWARDS</string>
    <string name="enter_account_holder_name">Enter Account Holder Name</string>
    <string name="outstanding_rewards">Outstanding Rewards</string>
    <string name="view_result">View Result</string>
    <string name="next">Next</string>
    <string name="enter_the_otp_sent_to_91_987654321">Enter the OTP sent to +91 987654321</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to </string>
    <string name="enter_email_address">Please enter email</string>
    <string name="enter_email_or_mobile">Please enter email or mobile number</string>
    <string name="enter_valid_email_address">Please enter valid email</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="most_played">Most Played</string>
    <string name="winnings">Winnings</string>
    <string name="change_number">Change Number</string>
    <string name="please_enter_4_digit_otp">Please Enter 4 digit OTP</string>
    <string name="no_internet_connection_please_try_again">No Internet Connection,Please Try again!</string>
    <string name="update_email">Update Email</string>
    <string name="update_phone_number">Update Phone Number </string>
    <string name="you_have_to_pay_400_from_your_wallet">You have to pay ₹400 from your wallet</string>
    <string name="confirm_pay"><![CDATA[Confirm & Pay]]></string>
    <string name="sorry_you_lost_the">Sorry! You lost the over</string>
    <string name="no_over_pridction_yet">No over prediction yet!</string>
    <string name="match_ended_full_amount_will_be_created_to_your_wallet">Match ended. Full amount will be created to your wallet</string>
    <string name="prediction_cancelled">Prediction Cancelled</string>
    <string name="over_number_12">Over Number: 12</string>
    <string name="amount_must_be_greater_than_zero">The amount must be greater than 0</string>
    <string name="sorry_you_don_t_have_sufficient_balance_to_play">Sorry, You don’t have sufficient balance to play</string>
    <string name="currency_symbol">₹</string>
    <string name="price_1000">₹1000</string>
    <string name="price_1500">₹1500</string>
    <string name="price_2000">₹2000</string>
    <string name="price_2500">₹2500</string>
    <string name="overs_played">Overs Played</string>
    <string name="claim_now">Claim Now</string>
    <string name="predict_again">Predict Again</string>
    <string name="view_for_matches">View for matches</string>
    <string name="edit_your_info_additional_information"><![CDATA[Edit your info & additional information]]></string>
    <string name="view_bank_details">View bank details</string>
    <string name="view_your_past_transaction">View your past transaction</string>
    <string name="enter_registered_email">Enter registered email</string>
    <string name="enter_registered_number">Enter registered number</string>

</resources>