<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/bg_blue">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_150"
        android:foregroundGravity="center"
        android:src="@drawable/ic_logo_bg_blue_dark"
        android:layout_marginBottom="@dimen/dp_10"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        />






    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_35"


        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/outstanding_rewards"
        app:fontFamily="@font/visby_bold"
        android:textSize="@dimen/sp_22"
        android:gravity="center"
        android:textColor="@color/colorWhite"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"

        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/dp_35"


        android:layout_marginBottom="@dimen/dp_15"
        android:text="HUGE PRIZE POOL"
        app:fontFamily="@font/visby_bold"
        android:textSize="@dimen/sp_22"
        android:textColor="@color/colorWhite"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imgPrice"

        />
    <ImageView
        android:id="@+id/imgPrice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_160"
        android:layout_marginHorizontal="@dimen/dp_35"
        android:src="@drawable/gold_img"
        android:layout_marginBottom="@dimen/dp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvResultLabel"

        />

    <LinearLayout
        android:id="@+id/llBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_5"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/box_border_blue"
        android:layout_marginHorizontal="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvResult"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:visibility="gone"

            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/dp_5"
            android:fontFamily="@font/visby_semi_bold"
            android:gravity="center"
            android:text=""
            android:background="@drawable/label_minutes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_border" />
        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_alignParentTop="true"
            android:paddingVertical="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_5"
            android:fontFamily="@font/visby_medium"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/dp_13"
            android:text="@string/correctly_predict_8_actions_in_one_over_and_share_50_of_the_prize_pool_pay_outs_from_5_of_8_correct_predictions"

            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_14"
             />
    </LinearLayout>
    <TextView
        android:id="@+id/tvResultLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_45"
        android:fontFamily="@font/visby_bold"
        android:gravity="center"
        android:text="@string/instant_cash_rewards"
        android:textAllCaps="true"

        android:background="@color/colorED183E5D"
        android:padding="@dimen/dp_5"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="-15dp"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llBox" />
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_25"
        android:fontFamily="@font/visby_bold"
        android:gravity="center"
        android:text="@string/_8_of_8_you_conquered_to_goliath"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_19"
        android:lineSpacingExtra="1dp"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnStart" />
    <TextView
        android:id="@+id/btnStart"
        style="@style/AppButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_35"
        android:fontFamily="@font/visby_semi_bold"
        android:padding="@dimen/dp_5"
        android:text="@string/get_started"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_19"
        android:background="@drawable/button_background_radius_20"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>