<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="modal"
            type="com.fantasy.goliath.model.QuestionAnsItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clv_card_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/bg_question"
        android:padding="@dimen/dp_5">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/visby_semi_bold"
            android:gravity="start"
            android:paddingVertical="@dimen/dp_5"
            android:text="1. End Over EVEN runs."
            android:textColor="@color/colorText"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvYourAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/visby_medium"
            android:gravity="start"
            android:visibility="gone"

            android:paddingVertical="@dimen/dp_5"
            android:text="@string/your_answer_yes"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sp_12"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion" />


        <ImageView
            android:id="@+id/imgYes"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_5"
            android:src="@drawable/ic_checked_24"
           android:visibility="gone"
            android:layout_marginStart="@dimen/dp_10"

            app:layout_constraintStart_toEndOf="@id/tvYourAnswer"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion" />
        <ImageView
            android:id="@+id/imgNo"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"

            android:layout_marginTop="@dimen/dp_5"
            android:src="@drawable/ic_wrong_24"
            android:visibility="gone"
            android:layout_marginStart="@dimen/dp_10"

            app:layout_constraintStart_toEndOf="@id/tvYourAnswer"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion" />
        <TextView
            android:id="@+id/tvYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/button_border_blue_radius_20"
            android:fontFamily="@font/visby_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dp_15"
            android:paddingVertical="@dimen/dp_5"
            android:text="@string/yes"
            android:textColor="@color/app_color"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvYourAnswer" />

        <TextView
            android:id="@+id/tvNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/button_border_blue_radius_20"
            android:fontFamily="@font/visby_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/dp_15"
            android:paddingVertical="@dimen/dp_5"

            android:text="@string/no"
            android:textColor="@color/app_color"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toEndOf="@id/tvYes"
            app:layout_constraintTop_toBottomOf="@id/tvYourAnswer" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
